--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,6 +173,8 @@ SET( ${PROJECT_NAME}_INSTALL_PREFIX ${${PROJECT_NAME}_INSTALL_PREFIX} CACHE
 SET( CMAKE_INSTALL_PREFIX "${${PROJECT_NAME}_INSTALL_PREFIX}" CACHE INTERNAL "Prefix
 	prepended to install directories if target destination is not absolute,
 	immutable" FORCE )
+	
+SET( ${PROJECT_NAME}_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
 
 IF( ${PROJECT_NAME}_BUILD_SHARED_LIB )
 	SET( ${PROJECT_NAME}_LIBRARY_TYPE SHARED )
@@ -999,7 +1001,7 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 	    # Post-build target. In reality it is not a post-build step	, but it doesn't matter
 		ADD_CUSTOM_TARGET(PostBuild ALL ${CMAKE_COMMAND} -E echo Copying dependent files DEPENDS ALL)
 
-		IF ( CMAKE_CONFIGURATION_TYPES )
+		IF ( CMAKE_CONFIGURATION_TYPES ) # todo NMAKE support, should not be repeated and go here inside
 
 			# This loop copies the DLLs in each configuration binary dir.
 			FOREACH (config ${CMAKE_CONFIGURATION_TYPES})
@@ -1008,122 +1010,73 @@ IF(MSVC AND ${PROJECT_NAME}_TESTING)
 				IF (${PROJECT_NAME}_DRAW)
 				    ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${TCL_BIN_DIR}/${TCL_LIB_NAME_DIR}.dll ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
 				ENDIF()
-
-				# Copy the dll's referenced in the correct locations.
-					SET(TMP_SRCDIR ${OCE_BUNDLE_ROOT_PATH}/Win${BIT}/bin/)
-					SET(TMP_DESTDIR ${LIBRARY_OUTPUT_PATH}/${config})
-					STRING(REGEX REPLACE "/" "\\\\" TMP_SRCDIR ${TMP_SRCDIR})
-					STRING(REGEX REPLACE "/" "\\\\" TMP_DESTDIR ${TMP_DESTDIR})
-					SET (TMP_FILELIST FreeImage gl2ps freetype FreeImagePlus)
-
-					IF (${config} MATCHES "Debug")
-						 SET(TMP_SUFFIX "d")
-					ELSE ()
-						 SET(TMP_SUFFIX)
-					ENDIF()
-
-					FOREACH (TMP_FILE ${TMP_FILELIST} )
-							 ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND xcopy /Y ${TMP_SRCDIR}${TMP_FILE}${TMP_SUFFIX}.dll ${TMP_DESTDIR} VERBATIM )
-					ENDFOREACH()
-
+				
+				SET(TMP_FILELIST)
+				
+				IF (${config} MATCHES "Debug")
+					 SET(TMP_SUFFIX "d")
+				ELSE ()
+					 SET(TMP_SUFFIX)
+				ENDIF()
+				
+				IF (${config} MATCHES "Debug")
+					 SET(TMP_VAR_SUFFIX "_DEBUG")
+				ELSE ()
+					 SET(TMP_VAR_SUFFIX)
+				ENDIF()
+					
+				IF(FREETYPE_LIBRARY)
+            GET_FILENAME_COMPONENT(FREETYPE_DIR ${FREETYPE_LIBRARY${TMP_VAR_SUFFIX}} PATH)
+            GET_FILENAME_COMPONENT(FREETYPE_NAME ${FREETYPE_LIBRARY${TMP_VAR_SUFFIX}} NAME_WE)
+            LIST(APPEND TMP_FILELIST ${FREETYPE_DIR}/${FREETYPE_NAME}${TMP_SUFFIX}${CMAKE_SHARED_MODULE_SUFFIX})
+        ENDIF()    
+        
+        IF(FREEIMAGE_LIBRARY)
+            GET_FILENAME_COMPONENT(FREEIMAGE_DIR ${FREEIMAGE_LIBRARY${TMP_VAR_SUFFIX}} PATH)
+            GET_FILENAME_COMPONENT(FREEIMAGE_NAME ${FREEIMAGE_LIBRARY${TMP_VAR_SUFFIX}} NAME_WE)
+            LIST(APPEND TMP_FILELIST ${FREEIMAGE_DIR}/${FREEIMAGE_NAME}${TMP_SUFFIX}${CMAKE_SHARED_MODULE_SUFFIX})
+        ENDIF() 
+        
+        IF(FREEIMAGEPLUS_LIBRARY)
+            GET_FILENAME_COMPONENT(FREEIMAGEPLUS_DIR ${FREEIMAGEPLUS_LIBRARY${TMP_VAR_SUFFIX}} PATH)
+            GET_FILENAME_COMPONENT(FREEIMAGEPLUS_NAME ${FREEIMAGEPLUS_LIBRARY${TMP_VAR_SUFFIX}} NAME_WE)
+            LIST(APPEND TMP_FILELIST ${FREEIMAGEPLUS_DIR}/${FREEIMAGEPLUS_NAME}${TMP_SUFFIX}${CMAKE_SHARED_MODULE_SUFFIX})
+        ENDIF() 
+        
+        IF(GL2PS_LIBRARY)
+            GET_FILENAME_COMPONENT(GL2PS_DIR ${GL2PS_LIBRARY${TMP_VAR_SUFFIX}} PATH)
+            GET_FILENAME_COMPONENT(GL2PS_NAME ${GL2PS_LIBRARY${TMP_VAR_SUFFIX}} NAME_WE)
+            LIST(APPEND TMP_FILELIST ${GL2PS_DIR}/${GL2PS_NAME}${TMP_SUFFIX}${CMAKE_SHARED_MODULE_SUFFIX})
+        ENDIF() 
+        
+        FOREACH(TMP_ITEM ${TMP_FILELIST})
+           MESSAGE("Copy ${TMP_ITEM} to ${TMP_DESTDIR}")
+            # Copy the dll's referenced in the correct locations.
+            SET(TMP_DESTDIR ${LIBRARY_OUTPUT_PATH}/${config})
+            STRING(REGEX REPLACE "/" "\\\\" TMP_ITEM ${TMP_ITEM})
+            STRING(REGEX REPLACE "/" "\\\\" TMP_DESTDIR ${TMP_DESTDIR})
+            ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND if exist ${TMP_ITEM} xcopy /c /Y ${TMP_ITEM} ${TMP_DESTDIR} VERBATIM )
+        ENDFOREACH()
+        
 				# Switch between bin and bind dirs
 				IF (${config} MATCHES "Debug")
-					
-					# Install TBB libraries
-					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
+					 SET(TMP_SUFFIX "_debug")
+        ENDIF()
+        
+				# Install TBB libraries
+        IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
+          ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb${TMP_SUFFIX}.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
+        ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
 
-					IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-				ELSE ()
-					
-					# Install TBB libraries
-					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-
-					IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-				ENDIF()
+        IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
+          ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc${TMP_SUFFIX}.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
+        ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
+        
 			ENDFOREACH()
-		ELSE (CMAKE_CONFIGURATION_TYPES )
-			# Nmake support : just one configuration
-				ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory ${LIBRARY_OUTPUT_PATH}/ VERBATIM )
 				
-				IF (${PROJECT_NAME}_DRAW)
-					ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${TCL_BIN_DIR}/${TCL_LIB_NAME_DIR}.dll ${LIBRARY_OUTPUT_PATH}/ VERBATIM)
-				ENDIF()
-
-				IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
-					
-					# Install TBB libraries
-					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-
-					IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc_debug.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-				ELSE ()
-					
-					# Install TBB libraries
-					IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbb.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-
-					IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-						ADD_CUSTOM_COMMAND(TARGET PostBuild POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${TBB_BIN_DIR}/tbbmalloc.dll" ${LIBRARY_OUTPUT_PATH}/${config}/ VERBATIM)
-					ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-				ENDIF()
 		ENDIF (CMAKE_CONFIGURATION_TYPES) 
 		
 ENDIF(MSVC AND ${PROJECT_NAME}_TESTING)
-
-##############
-# Bundle AUTOINSTALL
-##############
-
-IF (${PROJECT_NAME}_BUNDLE_AUTOINSTALL AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-	IF (${PROJECT_NAME}_VISUALISATION)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/freetyped.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/freetype.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-	ENDIF(${PROJECT_NAME}_VISUALISATION)
-
-	IF (${PROJECT_NAME}_VISU_DEP AND ${PROJECT_NAME}_WITH_GL2PS )
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/gl2psd.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/gl2ps.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-	ENDIF(${PROJECT_NAME}_VISU_DEP AND ${PROJECT_NAME}_WITH_GL2PS)
-
-	IF (${PROJECT_NAME}_VISU_DEP AND ${PROJECT_NAME}_WITH_FREEIMAGE)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/FreeImaged.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/FreeImage.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/FreeImagePlusd.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-		INSTALL(FILES ${${PROJECT_NAME}_BUNDLE_ROOT_PATH}/Win${BIT}/bin/FreeImagePlus.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-	ENDIF(${PROJECT_NAME}_VISU_DEP AND ${PROJECT_NAME}_WITH_FREEIMAGE)
-
-	# Install TCL
-	IF (${PROJECT_NAME}_DRAW)
-		GET_FILENAME_COMPONENT(TCL_BIN_DIR ${TCL_TCLSH} PATH)
-		GET_FILENAME_COMPONENT(TCL_LIB_NAME_DIR ${TCL_LIBRARY} NAME_WE)
-		INSTALL(FILES ${TCL_BIN_DIR}/${TCL_LIB_NAME_DIR}.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug )
-		INSTALL(FILES ${TCL_BIN_DIR}/${TCL_LIB_NAME_DIR}.dll DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel )
-	ENDIF(${PROJECT_NAME}_DRAW)	
-
-	# Install TBB libraries
-	IF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-		INSTALL(FILES "${TBB_BIN_DIR}/tbb.dll" DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-		INSTALL(FILES "${TBB_BIN_DIR}/tbb_debug.dll" DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-	ENDIF(${PROJECT_NAME}_MULTITHREAD_LIBRARY STREQUAL "TBB" AND TBB_BIN_DIR)
-
-	IF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-		INSTALL(FILES "${TBB_BIN_DIR}/tbbmalloc.dll" DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel)
-		INSTALL(FILES "${TBB_BIN_DIR}/tbbmalloc_debug.dll" DESTINATION ${${PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Debug)
-	ENDIF(${PROJECT_NAME}_TBB_MALLOC_SUPPORT AND TBB_BIN_DIR)
-ENDIF(${PROJECT_NAME}_BUNDLE_AUTOINSTALL AND NOT ${PROJECT_NAME}_USE_BUNDLE_SOURCE)
-
 
 ###############
 # UnitTesting #
